--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.150.1"
+    "postprocessing": "^6.30.1",
+    "screen-space-reflections": "^2.5.0",
+    "three": "^0.150.1",
+    "three-full": "^28.0.2",
+    "three-gltf-loader": "^1.111.0",
+    "three-orbitcontrols": "^2.110.3",
+    "tweakpane": "^3.1.6"
   },
   "devDependencies": {
     "prettier": "^2.0.4",
